// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Date Snapshots has custom input format 1`] = `
<div
  className="MIRECO-date right-hang uptick-MIRECO"
  onBlur={[Function]}
  style={
    Object {
      "display": "inline-block",
    }
  }
  tabIndex={-1}
>
  <input
    autoFocus={undefined}
    className="MIRECO-text"
    disabled={undefined}
    maxLength={undefined}
    name={undefined}
    onBlur={undefined}
    onChange={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={undefined}
    placeholder="dd/mm/yyyy"
    required={undefined}
    size={undefined}
    style={
      Object {
        "marginBottom": "0",
      }
    }
    tabIndex={undefined}
    type="text"
    value=""
  />
</div>
`;

exports[`Date Snapshots has custom relative date options 1`] = `
<Select
  className="objectlist-current-filter__active-status"
  isClearable={false}
  onChange={[Function]}
  onInputChange={[Function]}
  options={
    Array [
      Object {
        "label": "Right now",
        "value": "now",
      },
      Object {
        "label": "A bit later",
        "value": "later",
      },
      Object {
        "label": "Never ever",
        "value": "never",
      },
    ]
  }
  styles={
    Object {
      "control": [Function],
      "dropdownIndicator": [Function],
      "multiValue": [Function],
      "multiValueLabel": [Function],
    }
  }
/>
`;

exports[`Date Snapshots has null value 1`] = `
<div
  className="MIRECO-date right-hang uptick-MIRECO"
  onBlur={[Function]}
  style={
    Object {
      "display": "inline-block",
    }
  }
  tabIndex={-1}
>
  <input
    autoFocus={undefined}
    className="MIRECO-text"
    disabled={undefined}
    maxLength={undefined}
    name={undefined}
    onBlur={undefined}
    onChange={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={undefined}
    placeholder=""
    required={undefined}
    size={undefined}
    style={
      Object {
        "marginBottom": "0",
      }
    }
    tabIndex={undefined}
    type="text"
    value=""
  />
</div>
`;

exports[`Date Snapshots renders default 1`] = `
<div
  className="MIRECO-date right-hang uptick-MIRECO"
  onBlur={[Function]}
  style={
    Object {
      "display": "inline-block",
    }
  }
  tabIndex={-1}
>
  <input
    autoFocus={undefined}
    className="MIRECO-text"
    disabled={undefined}
    maxLength={undefined}
    name={undefined}
    onBlur={undefined}
    onChange={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={undefined}
    placeholder="dd/mm/yyyy"
    required={undefined}
    size={undefined}
    style={
      Object {
        "marginBottom": "0",
      }
    }
    tabIndex={undefined}
    type="text"
    value=""
  />
</div>
`;

exports[`Date Snapshots renders with relative comparison 1`] = `
<Select
  className="objectlist-current-filter__active-status"
  isClearable={false}
  onChange={[Function]}
  onInputChange={[Function]}
  options={
    Array [
      Object {
        "label": "Today",
        "value": "today",
      },
      Object {
        "label": "Beginning of this week",
        "value": "week_start",
      },
      Object {
        "label": "Beginning of this month",
        "value": "month_start",
      },
      Object {
        "label": "Beginning of this year",
        "value": "year_start",
      },
    ]
  }
  styles={
    Object {
      "control": [Function],
      "dropdownIndicator": [Function],
      "multiValue": [Function],
      "multiValueLabel": [Function],
    }
  }
/>
`;
